tests/miniJava/neg/005553_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java new extends java { }
